# fastapi_zero

./: .coverage  pyproject.toml
async_project/: app.py
tests/: test_app.py
