[project]
name = "async-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "typos (>=1.44.0,<2.0.0)",
    "pytest-coverage (>=0.0,<0.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev async_project/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=async_project -vv'
post_test = 'coverage html'

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
